[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.8.2",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.77",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-pinecone>=0.2.12",
    "openai-agents>=0.3.3",
    "pypdf>=6.1.1",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
]
